fix: franjas y mas
